changed image source

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/Paul Martin Profile Picture.png" alt="Paul Martin Profile picture" height='250px'>
+        <img src="Paul Martin Profile Picture.png" alt="Paul Martin Profile picture" height='250px'>
         </td>
         <td>
           <h1>Paul Martin</h1>
