--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" description="A site for learning basic html">
-  <title>Paul Martin CV</title>
+  <title>Paul Martin</title>
 </head>
 
 <body>
